TEST_PROGRAMS/INVALID/frederic_lafrance/1.min
# Can't assign to a literal
4 = 5;
"hi" = 5;
